@@ -116,7 +116,7 @@
 						<artifactId>wildfly-maven-plugin</artifactId>
 						<version>${wildfly.maven.plugin.version}</version>
 						<configuration>
-							<jvm-args>${JAVA_OPTS}
+							<jvm-args>${JAVA_OPTS} --add-modules=java.se
 							</jvm-args>
 						</configuration>
 						<executions>
@@ -128,7 +128,6 @@
 								</goals>
 								<configuration>
 									<version>${wildfly.version}</version>
-									<addUser>admin:admin</addUser>
 								</configuration>
 							</execution>
 							<execution>
